@@ -89,6 +89,7 @@ static const SepRule rules[] = {
 };
 
 struct SerdWriterImpl {
+	SerdWorld*    world;
 	SerdSink      iface;
 	SerdSyntax    syntax;
 	SerdStyle     style;
@@ -144,7 +145,7 @@ w_err(SerdWriter* writer, SerdStatus st, const char* fmt, ...)
 	va_list args;
 	va_start(args, fmt);
 	const SerdError e = { st, NULL, 0, 0, fmt, &args };
-	serd_error(writer->error_sink, writer->error_handle, &e);
+	serd_error(writer->world, &e);
 	va_end(args);
 }
 
@@ -870,7 +871,8 @@ serd_writer_finish(SerdWriter* writer)
 }
 
 SerdWriter*
-serd_writer_new(SerdSyntax     syntax,
+serd_writer_new(SerdWorld*     world,
+                SerdSyntax     syntax,
                 SerdStyle      style,
                 SerdEnv*       env,
                 const SerdURI* base_uri,
@@ -879,6 +881,7 @@ serd_writer_new(SerdSyntax     syntax,
 {
 	const WriteContext context = WRITE_CONTEXT_NULL;
 	SerdWriter*        writer  = (SerdWriter*)calloc(1, sizeof(SerdWriter));
+	writer->world        = world;
 	writer->syntax       = syntax;
 	writer->style        = style;
 	writer->env          = env;
@@ -899,15 +902,6 @@ serd_writer_new(SerdSyntax     syntax,
 	writer->iface.end       = (SerdEndSink)serd_writer_end_anon;
 
 	return writer;
-}
-
-void
-serd_writer_set_error_sink(SerdWriter*   writer,
-                           SerdErrorSink error_sink,
-                           void*         error_handle)
-{
-	writer->error_sink   = error_sink;
-	writer->error_handle = error_handle;
 }
 
 void
